2005-07-12  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkwindow.h: 
	* gdk/gdkvisual.h: 
	* gdk/gdkselection.h: 
	* gdk/gdkselection.c: 
	* gdk/gdkregion.h: 
	* gdk/gdkproperty.h: 
	* gdk/gdkpixmap.h: 
	* gdk/gdkpixbuf.h: 
	* gdk/gdkkeyuni.c: 
	* gdk/gdkintl.h: 
	* gdk/gdkinput.h: 
	* gdk/gdkimage.h: 
	* gdk/gdkgc.h: 
	* gdk/gdkfont.h: 
	* gdk/gdkevents.h: 
	* gdk/gdkdnd.h: 
	* gdk/gdkcursor.h: 
	* gdk/gdkcolor.h: Add Copyright/License information.

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/imm-extra.h: Add Copyright/License information.

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktexttag.c (gtk_text_tag_class_init) 
	(gtk_text_tag_set_property): Remove the runtime warning about 
	the invisible property, add a warning about possible remaining
	problems to the documentation of the property.  (#66194)

	* gtk/gtktextview.c (gtk_text_view_move_cursor_internal): Don't
	ever go unconditionally to the buffer ends; that doesn't work
	if the initial or final portion of the buffer are invisible.

2005-07-11  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_class_init): add binding entry
	for ctrl + backspace (move focus to parent without affecting
	selection),
	(gtk_tree_view_real_select_cursor_parent): implement ctrl+backspace
	and simplify the function a bit. (#309296, Kathy Fernandes).

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	Make gdk_window_present() move the window to the current
	desktop, instead of letting the WM change the current
	desktop to where the window is.  (#166379, Elijah Newren)
	
	* gdk/gdk.symbols: 
	* gdk/x11/gdkx.h: 
	* gdk/x11/gdkwindow-x11.c (gdk_x11_window_move_to_current_desktop): 
	New function to move a window to the current desktop.
	
	* gtk/gtkwindow.c (gtk_window_present_with_time): Move the
	window to the current desktop before giving it focus.  

2005-07-11  Matthias Clasen  <mclasen@redhat.com>

	When dragging text, use a drag icon showing the (ellipsized)